--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       const accountBox = document.getElementById("accountBox");
       const welcomeMessage = document.getElementById("welcomeMessage");
 
-      if (username === "Curtisse" && password === "James50c") {
+      if (username === "Curtise" && password === "James50c") {
         loginBox.style.display = "none";
         loginLoading.style.display = "flex";
 
@@ -372,3 +372,4 @@
 
 </body>
 </html>
+
